Fix white space between links

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 
         .link-grid {
             display: grid;
-            gap: 1rem;
+            gap: 0.75rem;
             margin: 0 auto 2rem;
             max-width: 550px;
             width: 90%;
@@ -41,6 +41,9 @@
             box-shadow: 0 4px 8px 0 rgb(56, 56, 56), 0 6px 20px 0 rgb(56, 50, 56);
             margin-bottom: 10px;
             transition: background-color 0.2s, transform 0.2s;
+            width: 100%;
+            box-sizing: border-box;
+            justify-content: flex-start;
         }
 
         @media (orientation: portrait) {
@@ -51,7 +54,7 @@
 
         @media (orientation: landscape) {
             .link-grid {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(2, minmax(220px, 1fr));
             }
         }
 
